--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
 	<version>1.0</version>
 	<name>Utils</name>
 	<description>Util classes</description>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<resources>
 			<resource>
@@ -35,6 +43,14 @@
 					<fork>true</fork>
 					<compilerVersion>1.7</compilerVersion>
 					<optimize>true</optimize>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
