--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.njol</groupId>
-	<artifactId>Utils</artifactId>
-	<version>1.0</version>
+	<artifactId>utils</artifactId>
+	<version>1.0-SNAPSHOT</version><!-- too lazy to make actual versions -->
 	<name>Utils</name>
 	<description>Util classes</description>
 	<dependencies>
@@ -53,6 +53,25 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>njol-repo</id>
+			<url>file://///DISKSTATION/web/maven.njol.ch/repo/</url>
+		</repository>
+	</distributionManagement>
 </project>
