--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,15 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<!-- not used; compiled with Eclipse -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.1</version>
 				<configuration>
+					<skipMain>true</skipMain>
+					<skip>true</skip>
 					<source>1.6</source>
 					<target>1.6</target>
-					<fork>true</fork>
 					<compilerVersion>1.7</compilerVersion>
 					<optimize>true</optimize>
 				</configuration>
